--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -172,6 +172,13 @@
             <version>${protobuf.version}</version>
         </dependency>
 
+        <!-- Kafka -->
+        <dependency>
+            <groupId>io.projectreactor.kafka</groupId>
+            <artifactId>reactor-kafka</artifactId>
+            <version>1.3.25</version>
+        </dependency>
+
         <!-- Common -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -184,6 +191,11 @@
         </dependency>
 
         <!-- Test -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
