fix: fixed authentication related test failure

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -182,6 +182,10 @@
             <groupId>org.postgresql</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+        </dependency>
 
         <!-- Protobuf -->
         <dependency>
